compiler/tests/safety/success/x86-64/array-len.jazz
inline
fn fillhalf(stack u32[16] blk, reg u32 cond) -> stack u32[16] {
  inline int i;

  if cond == 0 {
    for i = 0 to 8 {
      blk[i] = i;
    }
  } else {
    for i = 8 to 16 {
      blk[i] = i;
    }
  }
  
  return blk;
}


export
fn array() -> reg u32 {
  inline int i;
  reg u32 cond, res;
  stack u32[16] blk;

  cond = 0;
  blk = fillhalf(blk, cond);
  cond = 1;
  blk = fillhalf(blk, cond);

  res = 0;
  for i = 0 to 16 {
    res += blk[i];
  }
  
  return res;
}
